<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/stopPoint_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/stopPoint_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/stopPoint_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/stopPoint_avatarDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopPoint_cost" />

            <TextView
                android:id="@+id/stopPoint_minCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stopPoint_minCost_hint" />

            <TextView
                android:id="@+id/stopPoint_maxCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stopPoint_maxCost_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopPoint_time" />

            <TextView
                android:id="@+id/stopPoint_arrivalAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopPoint_arrivalAt_hint" />

            <TextView
                android:id="@+id/stopPoint_leaveAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopPoint_leaveAt_hint" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>