<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PickStartEndActivity">

    <Button
        android:id="@+id/pickStartEnd_pickStartPointBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/pickStartEnd_pickStartPointBtn"/>
    <Button
        android:id="@+id/pickStartEnd_pickEndPointBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/pickStartEnd_pickEndPointBtn"/>
    <TextView
        android:id="@+id/pickStartEnd_startPointInfo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/pickStartEnd_startPointInfo_hint"/>
    <TextView
        android:id="@+id/pickStartEnd_endPointInfo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/pickStartEnd_endPointInfo_hint"/>
    <Button
        android:id="@+id/pickStartEnd_confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/pickStartEnd_confirmBtn"/>

</LinearLayout>