<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/member_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/member_avatar_hint" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/member_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/member_id_hint" />

        <TextView
            android:id="@+id/member_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/member_name_hint" />

        <TextView
            android:id="@+id/member_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/member_phone_hint"/>

    </LinearLayout>

</LinearLayout>