<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backgroundApp"
    tools:context=".Main1Activity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        />
    <EditText
        android:id="@+id/dangki_email"
        android:layout_marginTop="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/dangky_email"
        android:textColorHint="@color/edittextlogin"
        android:background="@drawable/button_login"
        android:inputType="text"

        />

    <EditText
        android:id="@+id/dangki_Pass"
        android:layout_width="300dp"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColorHint="@color/edittextlogin"
        android:background="@drawable/button_login"
        android:hint="@string/dangky_password"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/dangki_Ho_Ten"
        android:layout_marginTop="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/dangky_fullname"
        android:textColorHint="@color/edittextlogin"
        android:background="@drawable/button_login"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dangki_Address"
        android:layout_marginTop="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/dangky_address"
        android:textColorHint="@color/edittextlogin"
        android:background="@drawable/button_login"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/dangki_SDT"
        android:layout_marginTop="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/dangky_phoneNumber"
        android:textColorHint="@color/edittextlogin"
        android:background="@drawable/button_login"
        android:inputType="phone"
        />
    <EditText
        android:id="@+id/dangki_Date"
        android:layout_marginTop="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/dangky_Date"
        android:textColorHint="@color/edittextlogin"
        android:background="@drawable/button_login"
        android:inputType="text"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/dangki_Phai"
        android:layout_marginTop="8dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/dangky_Phai"
        android:textColorHint="@color/edittextlogin"
        android:background="@drawable/button_login"
        android:inputType="number"
        android:maxLines="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDangKi_dangki"
            android:text="@string/dangky_signinButton"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_stye"
            android:textColor="@color/textwhile"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDangKi_huy"
            android:text="@string/dangky_cancelButton"
            android:background="@drawable/button_stye"
            android:textColor="@color/textwhile"
            />

    </LinearLayout>

</LinearLayout>