<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrounđangki"
    tools:context=".TourCreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/createTour_title"
            android:textColor="@color/textwhile"
            android:textSize="40sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/createTour_tourName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="@string/createTour_tourName"
            android:inputType="text"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile"
            android:textSize="20sp" />


        <EditText

            android:id="@+id/createTour_dateStart"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="@string/createTour_startDate"
            android:inputType="date"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile" />

        <EditText
            android:id="@+id/createTour_dateEnd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="@string/createTour_endDate"
            android:inputType="date"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile" />

        <EditText
            android:id="@+id/createTour_adult"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="@string/createTour_adult"
            android:inputType="number"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile" />

        <EditText
            android:id="@+id/createTour_child"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="@string/createTour_child"
            android:inputType="number"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile" />

        <EditText
            android:id="@+id/createTour_minCost"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="@string/createTour_minCost"
            android:inputType="number"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile"

            />

        <EditText
            android:id="@+id/createTour_maxCost"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="@string/createTour_maxCost"
            android:inputType="number"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile" />

        <EditText
            android:id="@+id/createTour_imageUrl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="@string/createTour_imageUrl"
            android:inputType="textUri"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/createTour_privateBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/createTour_private"
                    android:textColor="@color/textwhile"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/createTour_publicBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/createTour_public"
                    android:textColor="@color/textwhile"
                    android:textSize="18sp" />

            </LinearLayout>
        </RadioGroup>

        <Button
            android:id="@+id/createTour_pickStartEnd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_stye"
            android:gravity="center"
            android:text="@string/createTour_pickStartEnd"
            android:textColor="@color/backgrounđangki"
            android:textColorHint="@color/textwhile" />

        <Button
            android:id="@+id/createTour_createBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_stye"
            android:text="@string/createTour_createBtn"
            android:textColor="@color/backgrounđangki"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</ScrollView>