<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/comment_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/comment_avatar_hint"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comment_id"
                android:hint="@string/comment_id_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/comment_name"
                android:hint="@string/comment_name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/comment_comment"
        android:hint="@string/comment_comment_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>