<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrounđangki"
    android:orientation="vertical"
    tools:context=".UserToursActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/textwhile"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/userTour_title"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/userTour_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/userTour_previousPageBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_stye"
            android:text="@string/userTour_previousPageBtn" />

        <TextView
            android:id="@+id/userTour_currentPageText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textColor="@color/textwhile"
            android:textColorHint="@color/textwhile"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textAlignment="center"
            android:hint="@string/userTour_currentPageText_hint" />

        <Button
            android:id="@+id/userTour_nextPageBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_stye"
            android:text="@string/userTour_nextPageBtn" />
    </LinearLayout>

    <Button
        android:id="@+id/userTour_createTourBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_stye"
        android:text="@string/userTour_createTour" />

</LinearLayout>