<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout tools:context=".MainActivity"
    android:gravity="center"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        android:layout_marginBottom="10dp"

        />


    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/edittextuser"
        android:hint="@string/main_usernameHint"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        />


    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/edittextpass"
        android:hint="@string/main_passwordHint"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:inputType="textPassword"/>


    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp">

    <Button android:layout_marginRight="40dp"
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:text="@string/main_loginButton"
        android:textColor="@color/textwhile"
        android:id="@+id/buttonDangNhap"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="120dp"
        android:text="@string/main_signinButton"
        android:textColor="@color/textwhile"
        android:id="@+id/buttonDangKi"/>

</LinearLayout>

    <Button android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/main_escapeButton"
        android:textColor="@color/textwhile"
        android:id="@+id/buttonThoat"
        android:layout_marginTop="200dp"/>

</LinearLayout>